make csrf token checks a bit more elegant

--- a/ihaveasecret/templates/check_password.html
+++ b/ihaveasecret/templates/check_password.html
@@ -28,7 +28,7 @@
     {% endif %}
 
     <form method="post" action="{{ url_for('ihaveasecret.check_password', message_key=message_key) }}">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+        <input type="hidden" name="csrf_token" value="{{ make_csrf_token() }}">
         <div class="field">
             <label class="label">Password</label>
             <div class="control">
