--- a/ihaveasecret/templates/create.html
+++ b/ihaveasecret/templates/create.html
@@ -11,7 +11,7 @@
 {% endif %}
 
 <form method="post">
-    <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+    <input type="hidden" name="csrf_token" value="{{ make_csrf_token() }}">
     <div class="field">
         <label class="label">Message</label>
         <div class="control">
@@ -32,6 +32,7 @@
     <div class="field">
         <label class="label"><i>({{ gettext('optional') }})</i> {{ gettext('Password') }}</label>
         <div class="control">
+            <input class="input" type="hidden" name="username" autocomplete="username"> {# as recommanded by https://www.chromium.org/developers/design-documents/create-amazing-password-forms/ #}
             <input class="input" type="password" name="password" placeholder="{{ gettext('Your secret password') }}" autocomplete="new-password">
         </div>
     </div>
